--- a/release-notes.html
+++ b/release-notes.html
@@ -311,22 +311,28 @@
 <div class="ulist">
 <ul>
 <li>
-<p>Update <code>ch.qos.logback:logback-classic</code> to version <code>1.5.16</code> (<a href="https://github.com/apache/logging-log4j2/pull/3363">3363</a>)</p>
+<p>Update <code>ch.qos.logback:logback-classic</code> to version <code>1.5.17</code> (<a href="https://github.com/apache/logging-log4j2/pull/3495">3495</a>)</p>
 </li>
 <li>
-<p>Update <code>ch.qos.logback:logback-core</code> to version <code>1.5.16</code> (<a href="https://github.com/apache/logging-log4j2/pull/3362">3362</a>)</p>
+<p>Update <code>ch.qos.logback:logback-core</code> to version <code>1.5.17</code> (<a href="https://github.com/apache/logging-log4j2/pull/3493">3493</a>)</p>
 </li>
 <li>
 <p>Update <code>ch.qos.reload4j:reload4j</code> to version <code>1.2.26</code> (<a href="https://github.com/apache/logging-log4j2/pull/3291">3291</a>)</p>
 </li>
 <li>
-<p>Update <code>co.elastic.clients:elasticsearch-java</code> to version <code>8.17.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3286">3286</a>)</p>
+<p>Update <code>co.elastic.clients:elasticsearch-java</code> to version <code>8.17.3</code> (<a href="https://github.com/apache/logging-log4j2/pull/3523">3523</a>)</p>
 </li>
 <li>
-<p>Update <code>com.fasterxml.jackson:jackson-bom</code> to version <code>2.18.2</code> (<a href="https://github.com/apache/logging-log4j2/pull/3245">3245</a>)</p>
+<p>Update <code>com.fasterxml.jackson:jackson-bom</code> to version <code>2.18.3</code> (<a href="https://github.com/apache/logging-log4j2/pull/3517">3517</a>)</p>
 </li>
 <li>
-<p>Update <code>com.github.luben:zstd-jni</code> to version <code>1.5.6-10</code> (<a href="https://github.com/apache/logging-log4j2/pull/3443">3443</a>)</p>
+<p>Update <code>com.github.h-thurow:simple-jndi</code> to version <code>0.25.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3486">3486</a>)</p>
+</li>
+<li>
+<p>Update <code>com.github.luben:zstd-jni</code> to version <code>1.5.7-1</code> (<a href="https://github.com/apache/logging-log4j2/pull/3480">3480</a>)</p>
+</li>
+<li>
+<p>Update <code>com.github.spotbugs:spotbugs-annotations</code> to version <code>4.9.2</code> (<a href="https://github.com/apache/logging-log4j2/pull/3518">3518</a>)</p>
 </li>
 <li>
 <p>Update <code>com.google.code.gson:gson</code> to version <code>2.12.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/3429">3429</a>)</p>
@@ -344,10 +350,13 @@
 <p>Update <code>commons-logging:commons-logging</code> to version <code>1.3.5</code> (<a href="https://github.com/apache/logging-log4j2/pull/3444">3444</a>)</p>
 </li>
 <li>
+<p>Update <code>fast-xml-parser</code> to version <code>5.0.4</code> (<a href="https://github.com/apache/logging-log4j2/pull/3477">3477</a>)</p>
+</li>
+<li>
 <p>Update <code>gradle/develocity-actions</code> to version <code>1.3</code> (<a href="https://github.com/apache/logging-log4j2/pull/3308">3308</a>)</p>
 </li>
 <li>
-<p>Update <code>net.bytebuddy:byte-buddy</code> to version <code>1.17.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3425">3425</a>)</p>
+<p>Update <code>net.bytebuddy:byte-buddy</code> to version <code>1.17.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/3470">3470</a>)</p>
 </li>
 <li>
 <p>Update <code>net.java.dev.jna:jna</code> to version <code>5.16.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3328">3328</a>)</p>
@@ -365,7 +374,7 @@
 <p>Update <code>org.apache.commons:commons-pool2</code> to version <code>2.12.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/3420">3420</a>)</p>
 </li>
 <li>
-<p>Update <code>org.apache.groovy:groovy-bom</code> to version <code>4.0.24</code> (<a href="https://github.com/apache/logging-log4j2/pull/3192">3192</a>)</p>
+<p>Update <code>org.apache.groovy:groovy-bom</code> to version <code>4.0.25</code> (<a href="https://github.com/apache/logging-log4j2/pull/3413">3413</a>)</p>
 </li>
 <li>
 <p>Update <code>org.apache.logging.log4j:log4j-api</code> to version <code>2.24.3</code> (<a href="https://github.com/apache/logging-log4j2/pull/3292">3292</a>)</p>
@@ -377,16 +386,19 @@
 <p>Update <code>org.assertj:assertj-core</code> to version <code>3.27.3</code> (<a href="https://github.com/apache/logging-log4j2/pull/3403">3403</a>)</p>
 </li>
 <li>
+<p>Update <code>org.awaitility:awaitility</code> to version <code>4.3.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3485">3485</a>)</p>
+</li>
+<li>
 <p>Update <code>org.codehaus.plexus:plexus-utils</code> to version <code>3.6.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3294">3294</a>)</p>
 </li>
 <li>
-<p>Update <code>org.eclipse.platform:org.eclipse.osgi</code> to version <code>3.22.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3267">3267</a>)</p>
+<p>Update <code>org.eclipse.platform:org.eclipse.osgi</code> to version <code>3.23.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3529">3529</a>)</p>
 </li>
 <li>
 <p>Update <code>org.jmdns:jmdns</code> to version <code>3.6.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3193">3193</a>)</p>
 </li>
 <li>
-<p>Update <code>org.junit:junit-bom</code> to version <code>5.11.4</code> (<a href="https://github.com/apache/logging-log4j2/pull/3305">3305</a>)</p>
+<p>Update <code>org.junit:junit-bom</code> to version <code>5.12.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3484">3484</a>)</p>
 </li>
 <li>
 <p>Update <code>org.mockito:mockito-bom</code> to version <code>5.15.2</code> (<a href="https://github.com/apache/logging-log4j2/pull/3353">3353</a>)</p>
@@ -413,16 +425,19 @@
 <p>Update <code>org.ops4j.pax.exam:pax-exam</code> to version <code>4.14.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3275">3275</a>)</p>
 </li>
 <li>
-<p>Update <code>org.springframework.boot:spring-boot-autoconfigure</code> to version <code>3.4.2</code> (<a href="https://github.com/apache/logging-log4j2/pull/3411">3411</a>)</p>
+<p>Update <code>org.slf4j:slf4j-api</code> to version <code>2.0.17</code> (<a href="https://github.com/apache/logging-log4j2/pull/3524">3524</a>)</p>
+</li>
+<li>
+<p>Update <code>org.springframework.boot:spring-boot-autoconfigure</code> to version <code>3.4.3</code> (<a href="https://github.com/apache/logging-log4j2/pull/3481">3481</a>)</p>
 </li>
 <li>
 <p>Update <code>org.springframework.cloud:spring-cloud-context</code> to version <code>4.2.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3268">3268</a>)</p>
 </li>
 <li>
-<p>Update <code>org.springframework:spring-framework-bom</code> to version <code>6.2.3</code> (<a href="https://github.com/apache/logging-log4j2/pull/3466">3466</a>)</p>
+<p>Update <code>org.springframework:spring-framework-bom</code> to version <code>6.2.4</code> (<a href="https://github.com/apache/logging-log4j2/pull/3533">3533</a>)</p>
 </li>
 <li>
-<p>Update <code>org.wiremock:wiremock</code> to version <code>3.12.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3465">3465</a>)</p>
+<p>Update <code>org.wiremock:wiremock</code> to version <code>3.12.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/3522">3522</a>)</p>
 </li>
 </ul>
 </div>
