Add website content generated from `e3f7eb6329a21c1f3a4a30a980889d550a3c044a`

--- a/release-notes.html
+++ b/release-notes.html
@@ -301,6 +301,24 @@
 <article class="doc">
 <h1 class="page">Release notes</h1>
 <div class="sect1">
+<h2 id="release-notes-3-x-x"><a class="anchor" href="#release-notes-3-x-x"></a>3.x.x</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>This release contains&#8230;&#8203;</p>
+</div>
+<div class="sect2">
+<h3 id="release-notes-3-x-x-updated"><a class="anchor" href="#release-notes-3-x-x-updated"></a>Updated</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Update <code>org.apache.logging:logging-parent</code> to version <code>12.0.0</code></p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+</div>
+<div class="sect1">
 <h2 id="release-notes-3-0-0-beta3"><a class="anchor" href="#release-notes-3-0-0-beta3"></a>3.0.0-beta3</h2>
 <div class="sectionbody">
 <div class="dlist">
@@ -1227,7 +1245,7 @@ for Log4j 2.x will continue to operate with the Log4j 3.x libraries present inst
 </div>
 <footer class="footer">
   <p>
-    Copyright © 1999-2024 <a href="https://www.apache.org/">The Apache Software Foundation</a>.
+    Copyright © 1999-2025 <a href="https://www.apache.org/">The Apache Software Foundation</a>.
     Licensed under the <a href="https://www.apache.org/licenses/LICENSE-2.0">Apache Software License, Version 2.0</a>.
     Please read our <a href="https://privacy.apache.org/policies/privacy-policy-public.html">privacy policy</a>.
   </p>
