Add website content generated from `b23e9a56a9cc9eed8c48241555256db8647e917a`

--- a/release-notes.html
+++ b/release-notes.html
@@ -416,6 +416,9 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <li>
 <p>Add <code>collectionName</code> and <code>databaseName</code> arguments to the MongoDB appender (<a href="https://github.com/apache/logging-log4j2/pull/3467">3467</a>)</p>
 </li>
+<li>
+<p>Fix shutdownDisable configuration does not take effect (<a href="https://github.com/apache/logging-log4j2/issues/2614">2614</a>)</p>
+</li>
 </ul>
 </div>
 </div>
