Add website content generated from `93afabcd3817738454e38f4cf65dfa84268a2eb1`

--- a/release-notes.html
+++ b/release-notes.html
@@ -561,6 +561,9 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Minimize lock usage in <code>InternalLoggerRegistry</code>. (<a href="https://github.com/apache/logging-log4j2/issues/3399">3399</a>)</p>
 </li>
 <li>
+<p>Fix <code>ArrayIndexOutOfBoundsException</code> on <code>StatusData#getFormattedStatus</code>. (<a href="https://github.com/apache/logging-log4j2/issues/3562">3562</a>)</p>
+</li>
+<li>
 <p>Avoid surrogate character handling in <code>JsonWriter</code></p>
 </li>
 </ul>
