--- a/404.html
+++ b/404.html
@@ -73,7 +73,7 @@
 <article class="doc">
 <h1 class="page">Page Not Found</h1>
 <div class="paragraph">
-<p>The page you&#8217;re looking for does not exist. It may have been moved. You can return to the <a href="/index.html">start page</a>, or follow one of the links in the navigation to the left.</p>
+<p>The page you&#8217;re looking for does not exist. It may have been moved. You can return to the <a href="/log4j/2.x/index.html">start page</a>, or follow one of the links in the navigation to the left.</p>
 </div>
 <div class="paragraph">
 <p>If you arrived on this page by clicking on a link, please notify the owner of the site that the link is broken.
