Add website content generated from `d9811cce356c33555777a7d03975503a1fd67662`

--- a/release-notes.html
+++ b/release-notes.html
@@ -307,6 +307,16 @@
 <p>This release contains&#8230;&#8203;</p>
 </div>
 <div class="sect2">
+<h3 id="release-notes-3-x-x-fixed"><a class="anchor" href="#release-notes-3-x-x-fixed"></a>Fixed</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Add missing <code>uses</code> declarations in module descriptor. (<a href="https://github.com/apache/logging-log4j2/issues/3250">3250</a>)</p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
 <h3 id="release-notes-3-x-x-updated"><a class="anchor" href="#release-notes-3-x-x-updated"></a>Updated</h3>
 <div class="ulist">
 <ul>
