--- a/release-notes.html
+++ b/release-notes.html
@@ -348,7 +348,7 @@
 <p>Update <code>com.google.code.gson:gson</code> to version <code>2.12.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/3429">3429</a>)</p>
 </li>
 <li>
-<p>Update <code>com.google.guava:guava</code> to version <code>33.4.6-jre</code> (<a href="https://github.com/apache/logging-log4j2/pull/3574">3574</a>)</p>
+<p>Update <code>com.google.guava:guava</code> to version <code>33.4.7-jre</code> (<a href="https://github.com/apache/logging-log4j2/pull/3596">3596</a>)</p>
 </li>
 <li>
 <p>Update <code>commons-codec:commons-codec</code> to version <code>1.18.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3419">3419</a>)</p>
@@ -448,6 +448,9 @@
 </li>
 <li>
 <p>Update <code>org.wiremock:wiremock</code> to version <code>3.12.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/3522">3522</a>)</p>
+</li>
+<li>
+<p>Update <code>uk.org.webcompere:system-stubs-core</code> to version <code>2.1.8</code> (<a href="https://github.com/apache/logging-log4j2/pull/3589">3589</a>)</p>
 </li>
 </ul>
 </div>
