Add website content generated from `afa773a1ff2c9e773dd8e0745eead24b9c3ec32a`

--- a/release-notes.html
+++ b/release-notes.html
@@ -558,6 +558,9 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Minimize lock usage in <code>InternalLoggerRegistry</code>. (<a href="https://github.com/apache/logging-log4j2/issues/3399">3399</a>)</p>
 </li>
 <li>
+<p>Make annotation libraries visible transitively at compile time for Gradle users through Gradle Module Metadata and for JPMS users through <code>requires static</code> directives in <code>module-info.java</code> files. (<a href="https://github.com/apache/logging-log4j2/issues/3437">3437</a>)</p>
+</li>
+<li>
 <p>Fix shutdownDisable configuration does not take effect (<a href="https://github.com/apache/logging-log4j2/issues/2614">2614</a>)</p>
 </li>
 <li>
@@ -605,7 +608,7 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Update <code>com.github.spotbugs:spotbugs-annotations</code> to version <code>4.9.3</code> (<a href="https://github.com/apache/logging-log4j2/pull/3545">3545</a>)</p>
 </li>
 <li>
-<p>Update <code>com.google.guava:guava</code> to version <code>33.4.6-jre</code> (<a href="https://github.com/apache/logging-log4j2/pull/3575">3575</a>)</p>
+<p>Update <code>com.google.guava:guava</code> to version <code>33.4.7-jre</code> (<a href="https://github.com/apache/logging-log4j2/pull/3595">3595</a>)</p>
 </li>
 <li>
 <p>Update <code>commons-codec:commons-codec</code> to version <code>1.18.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3421">3421</a>)</p>
