--- a/release-notes.html
+++ b/release-notes.html
@@ -307,6 +307,16 @@
 <p>This release contains&#8230;&#8203;</p>
 </div>
 <div class="sect2">
+<h3 id="release-notes-3-x-x-changed"><a class="anchor" href="#release-notes-3-x-x-changed"></a>Changed</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Changes the layout used by the <a href="https://logging.apache.org/log4j/2.x/manual/configuration.html#automatic-configuration">default configuration</a>. (<a href="https://github.com/apache/logging-log4j2/pull/3118">3118</a>)</p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
 <h3 id="release-notes-3-x-x-fixed"><a class="anchor" href="#release-notes-3-x-x-fixed"></a>Fixed</h3>
 <div class="ulist">
 <ul>
