Add website content generated from `44a9421ebdda42f6856dde6a96b64d2bd9a6e241`

--- a/release-notes.html
+++ b/release-notes.html
@@ -331,6 +331,9 @@
 <div class="ulist">
 <ul>
 <li>
+<p>Add <code>log4j.plugin.enableBndAnnotations</code> option to <code>PluginProcessor</code>. This also renames the <code>pluginPackage</code> option to <code>log4j.plugin.package</code>. (<a href="https://github.com/apache/logging-log4j2/issues/3251">3251</a>)</p>
+</li>
+<li>
 <p>Update <code>ch.qos.logback:logback-classic</code> to version <code>1.5.18</code> (<a href="https://github.com/apache/logging-log4j2/pull/3550">3550</a>)</p>
 </li>
 <li>
