Add website content generated from `a4011d8e314f2044d5c7e0663cf7ed29c1be1052`

--- a/release-notes.html
+++ b/release-notes.html
@@ -596,6 +596,9 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Update <code>co.elastic.clients:elasticsearch-java</code> to version <code>8.17.3</code> (<a href="https://github.com/apache/logging-log4j2/pull/3521">3521</a>)</p>
 </li>
 <li>
+<p>Update <code>co.elastic.logging:log4j2-ecs-layout</code> to version <code>1.7.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3615">3615</a>)</p>
+</li>
+<li>
 <p>Update <code>com.code-intelligence:jazzer</code> to version <code>0.24.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3424">3424</a>)</p>
 </li>
 <li>
