--- a/release-notes.html
+++ b/release-notes.html
@@ -590,6 +590,9 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <div class="ulist">
 <ul>
 <li>
+<p>Update <code>actions/stale</code> to version <code>9.1.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3625">3625</a>)</p>
+</li>
+<li>
 <p>Update <code>ch.qos.logback:logback-core</code> to version <code>1.3.15</code> (<a href="https://github.com/apache/logging-log4j2/pull/3354">3354</a>)</p>
 </li>
 <li>
