Add website content generated from `db0360d4ce1e5ba5a3d9409da79695f54e857857`

--- a/release-notes.html
+++ b/release-notes.html
@@ -570,6 +570,9 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Deprecate or remove static hiding methods. (<a href="https://github.com/apache/logging-log4j2/issues/3601">3601</a>)</p>
 </li>
 <li>
+<p>Verify the capability of SecurityManager so that platforms not (fully) supporting it will not poison the stack trace (<a href="https://github.com/apache/logging-log4j2/issues/3639">3639</a>)</p>
+</li>
+<li>
 <p>Avoid surrogate character handling in <code>JsonWriter</code></p>
 </li>
 </ul>
