Add website content generated from `3709962553ddc27774163eb77845b0a47a7b9684`

--- a/release-notes.html
+++ b/release-notes.html
@@ -576,6 +576,9 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Verify the capability of SecurityManager so that platforms not (fully) supporting it will not poison the stack trace (<a href="https://github.com/apache/logging-log4j2/issues/3639">3639</a>)</p>
 </li>
 <li>
+<p>Improve performance and avoid memory consumption if logging primitive arrays as parameters (<a href="https://github.com/apache/logging-log4j2/pull/3645">3645</a>)</p>
+</li>
+<li>
 <p>Avoid surrogate character handling in <code>JsonWriter</code></p>
 </li>
 </ul>
