Add website content generated from `ac3469741a53a57502ed3314af4ef1558266f15f`

--- a/release-notes.html
+++ b/release-notes.html
@@ -582,6 +582,9 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Improve performance and avoid memory consumption if logging primitive arrays as parameters (<a href="https://github.com/apache/logging-log4j2/pull/3645">3645</a>)</p>
 </li>
 <li>
+<p>StatusLogger now writes to standard error by default. This fixes a regression introduced in 2.23.0. (<a href="https://github.com/apache/logging-log4j2/issues/3665">3665</a>)</p>
+</li>
+<li>
 <p>Avoid surrogate character handling in <code>JsonWriter</code></p>
 </li>
 </ul>
