--- a/release-notes.html
+++ b/release-notes.html
@@ -585,6 +585,9 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Improve performance and avoid memory consumption if logging primitive arrays as parameters (<a href="https://github.com/apache/logging-log4j2/pull/3645">3645</a>)</p>
 </li>
 <li>
+<p>Fix <code>ArrayIndexOutOfBoundsException</code> on invocation of <code>Message.getFormattedMessage()</code> when any thread has no stack trace, which occurs on some JVM implementations. (<a href="https://github.com/apache/logging-log4j2/pull/3655">3655</a>)</p>
+</li>
+<li>
 <p>StatusLogger now writes to standard error by default. This fixes a regression introduced in 2.23.0. (<a href="https://github.com/apache/logging-log4j2/issues/3665">3665</a>)</p>
 </li>
 <li>
