--- a/release-notes.html
+++ b/release-notes.html
@@ -463,6 +463,9 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Update <code>GcpLayout.json</code> JSON Template Layout event template to support automatic timestamp recognition by the Google Cloud Logging. This also changes <code>exception</code>, <code>thread</code>, <code>logger</code> fields, and removes <code>insertId</code> field. (<a href="https://github.com/apache/logging-log4j2/pull/3586">3586</a>)</p>
 </li>
 <li>
+<p>Have org.apache.logging.log4j.util.Base64Util invoke java.util.Base64 directly instead of reflectively. (<a href="https://github.com/apache/logging-log4j2/issues/3686">3686</a>)</p>
+</li>
+<li>
 <p>Improve implementations of <code>LogEvent.toImmutable()</code> and <code>ReusableMessage.memento()</code> and remove usage of <code>ThrowableProxy</code>.</p>
 </li>
 </ul>
