Add website content generated from `46db3f9163bb4cb85b388c684e7889bb25d25286`

--- a/release-notes.html
+++ b/release-notes.html
@@ -414,6 +414,9 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Add a <code>GraalVmProcessor</code> annotation processor to generate GraalVM reachability metadata. (<a href="https://github.com/apache/logging-log4j2/pull/3053">3053</a>)</p>
 </li>
 <li>
+<p>Fixed typo in "LoggerConfig.RootLogger.Builder#withtFilter(&#8230;&#8203;)" method. Created new corrected 'withFilter()' method and deprecated old method. (<a href="https://github.com/apache/logging-log4j2/issues/3369">3369</a>)</p>
+</li>
+<li>
 <p>Add <code>collectionName</code> and <code>databaseName</code> arguments to the MongoDB appender (<a href="https://github.com/apache/logging-log4j2/pull/3467">3467</a>)</p>
 </li>
 </ul>
