Add website content generated from `78d4cb8ed3e7b59d4c6cabcf6b32c9f4781543bb`

--- a/release-notes.html
+++ b/release-notes.html
@@ -555,6 +555,9 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Fix <code>ArrayIndexOutOfBoundsException</code> in JSON Template Layout truncated exception resolver (<a href="https://github.com/apache/logging-log4j2/pull/3212">3212</a>)</p>
 </li>
 <li>
+<p>Properly handle null 'replacement' parameter in RegexReplacement#createRegexReplacement. (<a href="https://github.com/apache/logging-log4j2/issues/3215">3215</a>)</p>
+</li>
+<li>
 <p>Fix detection of location requirements in <code>AsyncAppender</code>. (<a href="https://github.com/apache/logging-log4j2/issues/3257">3257</a>)</p>
 </li>
 <li>
