Add website content generated from `f53f65642796d4db729af7eb113bf46d676005f4`

--- a/release-notes.html
+++ b/release-notes.html
@@ -549,6 +549,9 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Ensures synchronization between <code>j.u.l.Logger.getLevel()</code> and <code>j.u.l.Logger.setLevel()</code> methods. (<a href="https://github.com/apache/logging-log4j2/issues/3119">3119</a>)</p>
 </li>
 <li>
+<p>Add improved validation to AsyncWaitStrategyFactoryConfig for null/empty factoryClassName. (<a href="https://github.com/apache/logging-log4j2/issues/3159">3159</a>)</p>
+</li>
+<li>
 <p>Fix NullPointerException when using <code>rootLogger = LEVEL</code> shorthand in properties without appender. (<a href="https://github.com/apache/logging-log4j2/issues/3206">3206</a>)</p>
 </li>
 <li>
