Add website content generated from `a3cc61da69013f930e47c32c9d81c9afe24ab274`

--- a/release-notes.html
+++ b/release-notes.html
@@ -760,6 +760,9 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <li>
 <p>Update <code>org.springframework.cloud:spring-cloud-context</code> to version <code>4.2.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/3560">3560</a>)</p>
 </li>
+<li>
+<p>Update <code>org.xmlunit:xmlunit-core</code> to version <code>2.10.2</code> (<a href="https://github.com/apache/logging-log4j2/pull/3685">3685</a>)</p>
+</li>
 </ul>
 </div>
 </div>
