--- a/release-notes.html
+++ b/release-notes.html
@@ -463,6 +463,9 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Currently Java 8 users do not have access to timestamps with sub-millisecond precision. This change moves the SystemClock implementation from log4j-core-java9 to log4j-core, overriding the current one, so that java 8 users can benefit from it. (<a href="https://github.com/apache/logging-log4j2/pull/3217">3217</a>)</p>
 </li>
 <li>
+<p>Don&#8217;t overwrite configured configuration name if the configuration has no loggers / no root logger. (<a href="https://github.com/apache/logging-log4j2/issues/3431">3431</a>)</p>
+</li>
+<li>
 <p>Update <code>GcpLayout.json</code> JSON Template Layout event template to support automatic timestamp recognition by the Google Cloud Logging. This also changes <code>exception</code>, <code>thread</code>, <code>logger</code> fields, and removes <code>insertId</code> field. (<a href="https://github.com/apache/logging-log4j2/pull/3586">3586</a>)</p>
 </li>
 <li>
