--- a/release-notes.html
+++ b/release-notes.html
@@ -414,6 +414,9 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Add a <code>GraalVmProcessor</code> annotation processor to generate GraalVM reachability metadata. (<a href="https://github.com/apache/logging-log4j2/pull/3053">3053</a>)</p>
 </li>
 <li>
+<p>Add <code>MonitorResource</code> configuration option to support the monitoring of external files in addition to the configuration file itself. (<a href="https://github.com/apache/logging-log4j2/issues/3074">3074</a>, <a href="https://github.com/apache/logging-log4j2/pull/3501">3501</a>)</p>
+</li>
+<li>
 <p>Fixed typo in "LoggerConfig.RootLogger.Builder#withtFilter(&#8230;&#8203;)" method. Created new corrected 'withFilter()' method and deprecated old method. (<a href="https://github.com/apache/logging-log4j2/issues/3369">3369</a>)</p>
 </li>
 <li>
